feat: validations corrected & message about successful registration added

--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,14 @@
 
                 <h1 class="registration__title">Forma rejestracyjna</h1>
 
-                <form class="registration__form">
+                <form class="registration__form" id="form">
 
                     <div class="registration__form_item">
-                        <input id='input' class= '_req'  type="text" name="user_name" required autocomplete="none">
+                        <input id='input' class= '_req name'  type="text" name="user_name" required autocomplete="none">
                         <label for="">Imię</label>
                     </div>
                     <div class="registration__form_item">
-                        <input id='input' class='_req'  type="text" name="user_surname" required autocomplete="none">
+                        <input id='input' class='_req name'  type="text" name="user_surname" required autocomplete="none">
                         <label for="">Nazwisko</label>
                     </div>
                     <div class="registration__form_item">
@@ -49,6 +49,19 @@
             </div>
         </div>
 
+        <div class="overlay">
+            <div class="success-message">
+                <div class="success-message__text" id="success"></div>
+                <button class="success-message__button">
+                    <div class="success-message__button_close">
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path opacity="0.5" d="M2 12C2 7.28595 2 4.92893 3.46447 3.46447C4.92893 2 7.28595 2 12 2C16.714 2 19.0711 2 20.5355 3.46447C22 4.92893 22 7.28595 22 12C22 16.714 22 19.0711 20.5355 20.5355C19.0711 22 16.714 22 12 22C7.28595 22 4.92893 22 3.46447 20.5355C2 19.0711 2 16.714 2 12Z" stroke="#1C274C" stroke-width="1.5"/>
+                            <path d="M14.5 9.50002L9.5 14.5M9.49998 9.5L14.5 14.5" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"/>
+                            </svg>
+                        </div>
+                </button>
+            </div>
+        </div>
     </body>
 
     <script type="module" src="./js/main.js"></script>
